// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.193,
    "fiber": 4.457,
    "ice": 45.903,
    "ingredients": [
      {
        "grams": 460,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 224,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 47,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 54,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 47,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.145,
    "pac": 27.57,
    "pod": 21.416,
    "protein": 0.157,
    "score": 10,
    "solids": 32.992,
    "sugars": 22.287,
    "temperature": -11,
    "violations": [],
    "water": 67.008,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 50.282,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.083,
    "pac": 33.689,
    "pod": 22.58,
    "protein": 0.175,
    "score": 10,
    "solids": 36.536,
    "sugars": 24.502,
    "temperature": -12,
    "violations": [],
    "water": 63.464,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 49.532,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 58.607,
    "pac": 37.429,
    "pod": 20.984,
    "protein": 0.175,
    "score": 10,
    "solids": 36.136,
    "sugars": 24.102,
    "temperature": -13,
    "violations": [],
    "water": 63.864,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 7.8,
    "fiber": 0.16,
    "ice": 49.177,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 78,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 0,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 6,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 38.043,
    "pac": 26.627,
    "pod": 18.561,
    "protein": 0.914,
    "score": 10,
    "solids": 30.007,
    "sugars": 17.37,
    "temperature": -11,
    "violations": [],
    "water": 69.993,
  },
  {
    "batch": 1000,
    "fat": 3,
    "fiber": 0.52,
    "ice": 50.357,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 30,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 46,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 4,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 4,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.113,
    "pac": 30.877,
    "pod": 23.024,
    "protein": 0.914,
    "score": 10,
    "solids": 30.003,
    "sugars": 21.786,
    "temperature": -12,
    "violations": [],
    "water": 69.997,
  },
  {
    "batch": 1000,
    "fat": 4.4,
    "fiber": 0.16,
    "ice": 49.781,
    "ingredients": [
      {
        "grams": 874,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 44,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 66,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 14,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.011,
    "pac": 33.506,
    "pod": 24.911,
    "protein": 0.874,
    "score": 10,
    "solids": 33.003,
    "sugars": 23.97,
    "temperature": -13,
    "violations": [],
    "water": 66.997,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.765,
  "fiber": 4.994,
  "ice": 49.498,
  "ingredients": [
    {
      "grams": 377,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 250,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 53,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 95,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 150,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 53,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.765,
  "pac": 37.213,
  "pod": 20.737,
  "protein": 1.757,
  "score": 10,
  "solids": 37.734,
  "sugars": 24.325,
  "violations": [],
  "water": 62.266,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 6.509,
    "fiber": 8.367,
    "ice": 52.248,
    "ingredients": [
      {
        "grams": 283,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 565,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 85,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 65,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 35.133,
    "pac": 20.041,
    "pod": 13.038,
    "protein": 5.349,
    "score": 10,
    "solids": 42.956,
    "sugars": 14.48,
    "temperature": -11,
    "violations": [],
    "water": 57.044,
  },
  {
    "batch": 1000,
    "fat": 6.256,
    "fiber": 8.048,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 272,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 561,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 52,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 113,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.057,
    "pac": 25.125,
    "pod": 13.002,
    "protein": 5.141,
    "score": 10,
    "solids": 42.972,
    "sugars": 15.596,
    "temperature": -12,
    "violations": [],
    "water": 57.028,
  },
  {
    "batch": 1000,
    "fat": 6.08,
    "fiber": 7.816,
    "ice": 49.78,
    "ingredients": [
      {
        "grams": 264,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 553,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 6,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 30,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 145,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.041,
    "pac": 28.542,
    "pod": 13.002,
    "protein": 4.992,
    "score": 10,
    "solids": 42.963,
    "sugars": 16.365,
    "temperature": -13,
    "violations": [],
    "water": 57.037,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > keeps the invalid coconut-milk high-water reference blocked and rescues a verified high-water alternative 1`] = `
{
  "before": {
    "batch": 1000,
    "fat": 2.325,
    "fiber": 4.93,
    "ice": 50.575,
    "ingredients": [
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 550,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 20,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 70,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 53,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 22.615,
    "pac": 17.814,
    "pod": 11.769,
    "protein": 0.1,
    "score": 5,
    "solids": 21.226,
    "sugars": 13.085,
    "violations": [
      "npac",
      "pod",
      "water",
      "total_solids",
    ],
    "water": 78.774,
  },
  "rejectedAfter": {
    "batch": 1000,
    "fat": 1.634,
    "fiber": 19.15,
    "ice": 49.669,
    "ingredients": [
      {
        "grams": 180,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 396,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 14,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 51,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 146,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 211,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.877,
    "pac": 31.485,
    "pod": 15.778,
    "protein": 0.072,
    "score": 10,
    "solids": 41.561,
    "sugars": 19.27,
    "violations": [],
    "water": 58.439,
  },
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.098,
    "fiber": 4.57,
    "ice": 45.58,
    "ingredients": [
      {
        "grams": 448,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 229,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 48,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 169,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 49,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.451,
    "pac": 27.614,
    "pod": 21.583,
    "protein": 0.092,
    "score": 10,
    "solids": 33.382,
    "sugars": 22.899,
    "temperature": -11,
    "violations": [],
    "water": 66.618,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 50.292,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.979,
    "pac": 33.18,
    "pod": 22.333,
    "protein": 0.1,
    "score": 10,
    "solids": 36.166,
    "sugars": 24.725,
    "temperature": -12,
    "violations": [],
    "water": 63.834,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 49.565,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 57.478,
    "pac": 36.921,
    "pod": 20.737,
    "protein": 0.1,
    "score": 10,
    "solids": 35.766,
    "sugars": 24.325,
    "temperature": -13,
    "violations": [],
    "water": 64.234,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.82,
    "ice": 52.317,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 549,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 23,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 124,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 36,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 35.068,
    "pac": 20.851,
    "pod": 16.993,
    "protein": 5.329,
    "score": 10,
    "solids": 40.54,
    "sugars": 17.855,
    "temperature": -11,
    "violations": [],
    "water": 59.46,
  },
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.82,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 523,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 23,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 128,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.002,
    "pac": 25.097,
    "pod": 18.891,
    "protein": 5.329,
    "score": 10,
    "solids": 42.964,
    "sugars": 20.279,
    "temperature": -12,
    "violations": [],
    "water": 57.036,
  },
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.82,
    "ice": 49.779,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 541,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 23,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 23,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 145,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.065,
    "pac": 29.805,
    "pod": 14.314,
    "protein": 5.329,
    "score": 10,
    "solids": 40.468,
    "sugars": 17.783,
    "temperature": -13,
    "violations": [],
    "water": 59.532,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.621,
  "fiber": 0.964,
  "ice": 49.778,
  "ingredients": [
    {
      "grams": 403,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 402,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 0,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 0,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 45,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 102,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 46,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 0,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 50.13,
  "pac": 33.587,
  "pod": 24.12,
  "protein": 0.684,
  "score": 10,
  "solids": 33.001,
  "sugars": 24.179,
  "violations": [],
  "water": 66.999,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.283,
  "fiber": 0.712,
  "ice": 49.781,
  "ingredients": [
    {
      "grams": 551,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 276,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 0,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 0,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 42,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 97,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 32,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 0,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 50.013,
  "pac": 33.506,
  "pod": 24.734,
  "protein": 0.744,
  "score": 10,
  "solids": 33.005,
  "sugars": 24.383,
  "violations": [],
  "water": 66.995,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 4.636,
    "fiber": 1.732,
    "ice": 51.777,
    "ingredients": [
      {
        "grams": 786,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 44,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 2,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 35.58,
    "pac": 24.904,
    "pod": 22.182,
    "protein": 0.55,
    "score": 10,
    "solids": 30.006,
    "sugars": 21.343,
    "temperature": -11,
    "violations": [],
    "water": 69.994,
  },
  {
    "batch": 1000,
    "fat": 1.535,
    "fiber": 1.726,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 783,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 13,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 36,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.025,
    "pac": 30.817,
    "pod": 24.476,
    "protein": 0.548,
    "score": 10,
    "solids": 30.001,
    "sugars": 24.453,
    "temperature": -12,
    "violations": [],
    "water": 69.999,
  },
  {
    "batch": 1000,
    "fat": 3.924,
    "fiber": 1.654,
    "ice": 49.78,
    "ingredients": [
      {
        "grams": 747,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 37,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 61,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.037,
    "pac": 33.522,
    "pod": 24.628,
    "protein": 0.523,
    "score": 10,
    "solids": 33.005,
    "sugars": 25.245,
    "temperature": -13,
    "violations": [],
    "water": 66.995,
  },
]
`;
